fix mobile overflow and alignment

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -73,7 +73,7 @@
         }
     }
 
-    @media screen and (min-width: 680px) {
+    @media screen and (min-width: 860px) {
         p {
             font-size: map-get($font-size, "large");
         }
