--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -1,21 +1,30 @@
 .Home {
-    position: relative;
-    height: calc(100vh - 90px);
+    // position: relative;
+    // height: calc(100vh - 90px);
 }
 
 .ProjectCard {  
-    position: absolute;
+    position: fixed;
     border-radius: 170px;
     bottom: 50%;
     text-align: center;
     right: 50%;
     overflow: hidden;
+    cursor: pointer;
+
+    &.main {
+        cursor: auto;
+    }
 
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         opacity: inherit;
+    }
+
+    @media screen and (min-width: 860px) {
+        bottom: 48%;
     }
 }
 
@@ -25,6 +34,7 @@
     position: absolute;
     bottom: 1.2rem;
     transform: translateY(50%);
+    pointer-events: none;
     
     &__text {
         color: map-get($colors, "beige");
@@ -43,8 +53,8 @@
         padding-left: 1rem;
     }
     
-    @media screen and (min-width: 680px) {
-        bottom: 50%;
+    @media screen and (min-width: 860px) {
+        bottom: 48%;
         
         &--prev {
             left: 1.5rem;
